# cbot_tracker

./: .gitignore  CMakeLists.txt  readme.md
conf/: cameras_info.yaml
include/cbot_tracker/: cameraWrapper.hpp  common_utility.hpp
src/: common_utility.cpp  visual_localization.cpp
